--- a/.github/workflows/run-gcms.yml
+++ b/.github/workflows/run-gcms.yml
@@ -3,7 +3,7 @@ name: GCMS Playwright Automation
 on:
   schedule:
     - cron: "0 21 * * 5"   # sexta-feira 18:00 (UTC-3)
-  workflow_dispatch:        # também permite rodar manual
+  workflow_dispatch:        # permite rodar manualmente
 
 jobs:
   run-gcms:
@@ -24,5 +24,8 @@ jobs:
           python -m playwright install --with-deps
 
       - name: Run script
+        env:
+          GCMS_URL: "https://unifier.oraclecloud.com/alcoa/bp/route/home/i-unifier"
+          PROJETO_CSV: "Lista de Projetos.csv"
         run: |
           python src/main.py
