--- a/.github/workflows/run-gcms.yml
+++ b/.github/workflows/run-gcms.yml
@@ -1,52 +1,49 @@
-name: GCMS Playwright Automation
+name: GCMS Automation Cloud
 
 on:
   schedule:
-    - cron: "0 21 * * 5"   # sexta-feira 18:00 (UTC-3)
+    - cron: "0 21 * * 5"
   workflow_dispatch:
 
 jobs:
-  run-gcms:
+  run:
     runs-on: ubuntu-latest
     permissions:
-      contents: write   # ← PERMISSÃO PARA COMMITAR
+      contents: write
 
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0   # precisa disso para fazer push depois
 
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
 
-      - name: Install dependencies
+      - name: Install Playwright and dependencies
         run: |
           pip install -r requirements.txt
           python -m playwright install --with-deps
 
-      - name: Run script
-        env:
-          GCMS_URL: "https://unifier.oraclecloud.com/alcoa/bp/route/home/i-unifier"
-          PROJETO_CSV: "Lista de Projetos.csv"
+      - name: Install Xvfb
         run: |
+          sudo apt-get update
+          sudo apt-get install -y xvfb
+
+      - name: Run automation (Chromium headed inside Xvfb)
+        env:
+          GCMS_URL: ${{ secrets.GCMS_URL }}
+          GCMS_PASSWORD: ${{ secrets.GCMS_PASSWORD }}
+          PROJETO_CSV: "Lista.csv"
+        run: |
+          Xvfb :99 -screen 0 1920x1080x24 &
+          export DISPLAY=:99
           python src/main.py
 
-      - name: Commit and push downloaded files
+      - name: Commit downloads
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-
-          # Adiciona os arquivos baixados (pasta downloads/)
-          git add downloads/*
-
-          # Checa se há mudanças
-          if git diff --cached --quiet; then
-            echo "Nenhum arquivo novo ou modificado — nada para commitar."
-          else
-            git commit -m "Atualização automática: novos CostSheet e CashFlow (Playwright)"
-            git push
-            echo "Commit enviado com sucesso."
-          fi
+          git config --global user.email "actions@github.com"
+          git config --global user.name "GitHub Actions"
+          git add downloads || true
+          git commit -m "Downloads" || true
+          git push || true
